--- a/index.html
+++ b/index.html
@@ -1,68 +1,21 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Visualización de datos - UOC</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      background-color: #f8f9fa;
-      color: #333;
-    }
-    header {
-      text-align: center;
-      padding: 20px;
-      background-color: #1e293b;
-      color: white;
-    }
-    .container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-    .card {
-      background: white;
-      border-radius: 12px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-      padding: 10px;
-      text-align: center;
-    }
-    img {
-      max-width: 100%;
-      border-radius: 8px;
-    }
-    iframe {
-      width: 100%;
-      height: 400px;
-      border: none;
-      border-radius: 8px;
-    }
-  </style>
 </head>
 <body>
-  <header>
-    <h1>Visualizaciones para la PR2</h1>
-  </header>
+  <h1>Visualizaciones de la PR2</h1>
 
-  <main class="container">
-    <div class="card">
-      <h2>Gráfica 1</h2>
-      <img src="stream_graph.png" alt="Stream graph">
-    </div>
+  <h2>Stream graph</h2>
+  <img src="stream_graph.png" alt="Stream graph" style="max-width:100%;">
 
-        <div class="card">
-      <h2>Gráfica en vivo (localhost)</h2>
-      <iframe src="file:///C:/Users/albacortes/Desktop/UOC/Visualizacion_de_datos/PR2_visualizacion/sankey_diagram.html" title="Sankey diagram"></iframe>
-    </div>
+  <h2>Sankey diagram</h2>
+  <iframe src="sankey_diagram.html" width="100%" height="600" style="border:none;"></iframe>
 
-    <div class="card">
-      <h2>Gráfica 2</h2>
-      <img src="raincloud_plot.png" alt="Raincloud plot">
-    </div>
+  <h2>Raincloud plot</h2>
+  <img src="raincloud_plot.png" alt="Raincloud plot" style="max-width:100%;">
 
-  </main>
 </body>
 </html>
