--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
   <h2>Raincloud plot</h2>
   <img src="raincloud_plot.png" alt="Raincloud plot" style="max-width:100%;">
 
+  <h2>Referencias:</h2>
   <ul>
-    <li>Catálogo de Visualización de Datos. (s. f.). Recuperado 30 de octubre de 2025, de https://datavizcatalogue.com/ES/</li>
-    <li>Ferdio. (s. f.). Data Viz Project. Data Viz Project. Recuperado 30 de octubre de 2025, de https://datavizproject.com/</li>
-    <li>Healy, Y. H. and C. (s. f.). From data to Viz | Find the graphic you need. Recuperado 30 de octubre de 2025, de https://www.data-to-viz.com/data-to-viz.com</li>
-    <li>Holtz, Y. (s. f.). Raincloud plot in Python with Matplotlib and PtitPrince. The Python Graph Gallery. Recuperado 30 de octubre de 2025, de https://python-graph-gallery.com/raincloud-plot-with-matplotlib-and-ptitprince/</li>
-    <li>matplotlib.pyplot.stackplot—Matplotlib 3.10.7 documentation. (s. f.). Recuperado 30 de octubre de 2025, de https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.stackplot.html</li>
-    <li>pandas documentation—Pandas 2.3.3 documentation. (s. f.). Recuperado 30 de octubre de 2025, de https://pandas.pydata.org/docs/</li>
-    <li>Sankey. (s. f.). Recuperado 30 de octubre de 2025, de https://plotly.com/python/sankey-diagram/</li>
-    <li>Waskom, M. (2021). seaborn: Statistical data visualization. Journal of Open Source Software, 6(60), 3021. https://doi.org/10.21105/joss.03021</li>
+    <li>Catálogo de Visualización de Datos. (s. f.). Recuperado 30 de octubre de 2025, de <a href=https://datavizcatalogue.com/ES>https://datavizcatalogue.com/ES/</a></li>
+    <li>Ferdio. (s. f.). Data Viz Project. Data Viz Project. Recuperado 30 de octubre de 2025, de <a href=https://datavizproject.com>https://datavizproject.com</a></li>
+    <li>Healy, Y. H. and C. (s. f.). From data to Viz | Find the graphic you need. Recuperado 30 de octubre de 2025, de <a href=https://www.data-to-viz.com/data-to-viz.com>https://www.data-to-viz.com/data-to-viz.com</a></li>
+    <li>Holtz, Y. (s. f.). Raincloud plot in Python with Matplotlib and PtitPrince. The Python Graph Gallery. Recuperado 30 de octubre de 2025, de <a href=https://python-graph-gallery.com/raincloud-plot-with-matplotlib-and-ptitprince>https://python-graph-gallery.com/raincloud-plot-with-matplotlib-and-ptitprince/</a></li>
+    <li>matplotlib.pyplot.stackplot—Matplotlib 3.10.7 documentation. (s. f.). Recuperado 30 de octubre de 2025, de <a href=https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.stackplot.html>https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.stackplot.html</a></li>
+    <li>pandas documentation—Pandas 2.3.3 documentation. (s. f.). Recuperado 30 de octubre de 2025, de <a href=https://pandas.pydata.org/docs>https://pandas.pydata.org/docs/</a></li>
+    <li>Sankey. (s. f.). Recuperado 30 de octubre de 2025, de <a href=https://plotly.com/python/sankey-diagram>https://plotly.com/python/sankey-diagram</a></li>
+    <li>Waskom, M. (2021). seaborn: Statistical data visualization. Journal of Open Source Software, 6(60), 3021. <a href=https://doi.org/10.21105/joss.03021>https://doi.org/10.21105/joss.03021</a></li>
   </ul>
 
 </body>
