--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   <title>Visualización de datos - UOC</title>
 </head>
 <body>
-  <h1>Visualizaciones de la PR2</h1>
-
-  <h2>Stream graph</h2>
-  <img src="stream_graph.png" alt="Stream graph" style="max-width:100%;">
+  <h1>Visualización de datos - UOC</h1>
+  <h2> PR2 - Alba Cortés Iglesias </h2>
+ 
 
   <h2>Sankey diagram</h2>
   <iframe src="sankey_diagram.html" width="100%" height="600" style="border:none;"></iframe>
+
+  <h2>Stream graph</h2>
+  <img src="stream_graph.png" alt="Stream graph" style="max-width:100%;">
 
   <h2>Raincloud plot</h2>
   <img src="raincloud_plot.png" alt="Raincloud plot" style="max-width:100%;">
