Update subtitle from 'PR2' to 'PEC2'

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Visualización de datos - UOC</h1>
-  <h2> PR2 - Alba Cortés Iglesias </h2>
+  <h2> PEC2 - Alba Cortés Iglesias </h2>
  
 
   <h2>Sankey diagram</h2>
